<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="5dp"
              tools:context="au.com.psilisoft.www.rosterbuilder.StaffMainFragment">

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/label_staff_name"
        android:textSize="32sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_shifts_required"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_minimum"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/text_view_minimum_shifts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="3"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/label_maximum"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/text_view_maximum_shifts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="5"
                android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_hours_required"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_minimum"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/text_view_minimum_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="15"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/label_maximum"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/text_view_maximum_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="30"
                android:textSize="20sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_abilities"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/button_edit_abilities"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_edit_abilities"/>


        </LinearLayout>

        <ListView
            android:id="@+id/list_view_abilities"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/button_staff_availabilities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_availability"/>

        <Button
            android:id="@+id/button_staff_unavailabilities"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_dates_unavailable"/>

    </LinearLayout>

</LinearLayout>
